--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -14,7 +14,7 @@
                 <img class="d-block w-100 h-100" src="{% static 'img/car-6.jpg' %}" alt="banner">
                 <div class="carousel-content container banner-info-2 bi-2 text-left">
                 
-                    <h3>manav loves binal</h3>
+                    <h3>manav loves </h3>
                     <h5>Allow us to guide you through the innovative stress<br>
                         free approach in finding your dream car.</h5>
                     <a href="{% url 'services' %}" class="btn btn-lg btn-theme">Read More</a>
